-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: port-stage-ppc-aix
-
Component/s: hotspot
-
None
-
master
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8033041 | 9 | Goetz Lindenmaier | P4 | Resolved | Fixed | b04 |
| JDK-8045343 | 8u25 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8038541 | 8u20 | Goetz Lindenmaier | P4 | Resolved | Fixed | b08 |
| JDK-8053452 | emb-8u26 | Goetz Lindenmaier | P4 | Resolved | Fixed | b17 |
To allow some special cases when dumping debug information about IR
nodes, _in_dump_cnt can be increased. Unfortunately this is a global
field. If running with more than one compiler thread races can happen.
As consequence, dumping crashes e.g. in MachProjNode::adr_type().
This change moves the field to the Compile object.
It also introduces the compiler oracle 'option' feature for PrintAssembly.
---------------------------------
This is preparation for PPC64 integration: http://openjdk.java.net/jeps/175
This and following ppc64 changes will go into staging repository first and tested there: http://hg.openjdk.java.net/ppc-aix-port/stage/
http://hg.openjdk.java.net/ppc-aix-port/jdk8/hotspot/file/338e318f1e12/ppc_patches/0203_opto-Move_static_in_dump_cnt_to_Compile_object.patch
nodes, _in_dump_cnt can be increased. Unfortunately this is a global
field. If running with more than one compiler thread races can happen.
As consequence, dumping crashes e.g. in MachProjNode::adr_type().
This change moves the field to the Compile object.
It also introduces the compiler oracle 'option' feature for PrintAssembly.
---------------------------------
This is preparation for PPC64 integration: http://openjdk.java.net/jeps/175
This and following ppc64 changes will go into staging repository first and tested there: http://hg.openjdk.java.net/ppc-aix-port/stage/
http://hg.openjdk.java.net/ppc-aix-port/jdk8/hotspot/file/338e318f1e12/ppc_patches/0203_opto-Move_static_in_dump_cnt_to_Compile_object.patch
- backported by
-
JDK-8033041 PPC64 (part 203): opto: Move static _in_dump_cnt to Compile object.
-
- Resolved
-
-
JDK-8038541 PPC64 (part 203): opto: Move static _in_dump_cnt to Compile object.
-
- Resolved
-
-
JDK-8045343 PPC64 (part 203): opto: Move static _in_dump_cnt to Compile object.
-
- Resolved
-
-
JDK-8053452 PPC64 (part 203): opto: Move static _in_dump_cnt to Compile object.
-
- Resolved
-