8029025: PPC64 (part 203): opto: Move static _in_dump_cnt to Compile object

Also introduces the compiler oracle 'option' feature for PrintAssembly.

Reviewed-by: kvn